<resources>
    <string name="app_name">Inteliment</string>
    <string name="scenario_one">Scenario 1</string>
    <string name="scenario_two">Scenario 2</string>
    <string name="text_view_one">TextView 1</string>
    <string name="text_view_two">TextView 2</string>
    <string name="text_view_three">TextView 3</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="network_not_available">Network unavailable</string>
    <string name="fragment">Fragment</string>
    <string name="item">Item</string>
    <string name="holder_txt">Please click on Horizontal list item to get text here</string>
    <string name="select_location">Select a location</string>
    <string name="loading">Loading</string>
    <string name="navigate">Navigate</string>
    <string name="mode_of_transport">Mode of Transport :</string>
    <string name="no_internet">No Internet connectivity found</string>
    <string name="unable_to_fetch">Unable to fetch data at this time, please try later</string>
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="code">Code</string>
    <string name="analysis">Analysis</string>
    <string name="design">Design</string>
</resources>
