<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vpi="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:scrollbars="none" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager_images"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.android.test.inteliment.helper.CirclePageIndicator
            android:id="@+id/indicator_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            vpi:snap="false" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txt_code"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/code" />

        <TextView
            android:id="@+id/txt_analysis"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/analysis" />


        <TextView
            android:id="@+id/txt_design"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:padding="5dp"
            android:text="@string/design" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_view"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:padding="10dp"
        android:textColor="@color/gray_pager"
        android:text="@string/holder_txt" />

    <LinearLayout
        android:id="@+id/btn_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_red"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:text="@string/red"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_blue"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:text="@string/blue"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_green"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:text="@string/green"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>