<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:ms_alignLabels="false"
        app:ms_arrowColor="@android:color/darker_gray"
        app:ms_arrowSize="14dp"
        app:ms_enableErrorLabel="false"
        app:ms_enableFloatingLabel="false"
        app:ms_floatingLabelText="floating label"
        app:ms_hint="@string/select_location"
        app:ms_hintColor="@android:color/darker_gray"
        app:ms_multiline="false"
        app:ms_thickness="1dp" />

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mode_of_transport" />

    <TextView
        android:id="@+id/mode_of_transport"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        android:lineSpacingMultiplier="1.5" />

    <Button
        android:id="@+id/btn_navigate"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/navigate"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</LinearLayout>